srcs/kustomization/nginx-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dpl
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-server
        image: yobasystems/alpine-nginx
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
          - readOnly: true
            mountPath: /etc/nginx
            name: nginx.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    run: nginx-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
  selector:
    app: nginx
