srcs/kustomization/phpmyadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-dpl
  labels:
    app: phpmyadmin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
              name: phpmyadmin
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: phpmyadmin-svc
  name: phpmyadmin-svc
spec:
  selector:
    app: phpmyadmin
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
