srcs/kustomization/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ft-service-ingress
  labels:
    app: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
        - path: /nginx
          backend:
            serviceName: nginx-svc
            servicePort: 80
        - path: /wordpress
          backend:
            serviceName: wordpress-svc
            servicePort: 80
